# VoxyEnginePlus

./: .astylerc  .clang-format  .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  as.predefined  vcpkg.json
Mycelium/: CMakeLists.txt  deps.cmake
Mycelium/include/preprocessor/: MySimpleUI.g4  MySimpleUI.interp  MySimpleUI.tokens  MySimpleUIBaseListener.cpp  MySimpleUIBaseListener.h  MySimpleUIBaseVisitor.cpp  MySimpleUIBaseVisitor.h  MySimpleUILexer.cpp  MySimpleUILexer.h  MySimpleUILexer.interp  MySimpleUIListener.cpp  MySimpleUIListener.h  MySimpleUIParser.cpp  MySimpleUIParser.h  MySimpleUIVisitor.cpp  MySimpleUIVisitor.h  MyceliumUI.g4  MyceliumUI.interp  MyceliumUIBaseListener.cpp  MyceliumUIBaseListener.h  MyceliumUIBaseVisitor.cpp  MyceliumUIBaseVisitor.h  MyceliumUILexer.cpp  MyceliumUILexer.h  MyceliumUILexer.interp  MyceliumUILexer.tokens  MyceliumUIListener.cpp  MyceliumUIListener.h  MyceliumUIParser.cpp  MyceliumUIParser.h  MyceliumUIVisitor.cpp  MyceliumUIVisitor.h  build.bat
Mycelium/include/preprocessor/.antlr/: MySimpleUI.interp  MySimpleUIBaseListener.java  MySimpleUILexer.java  MySimpleUIListener.java  MySimpleUIParser.java
Mycelium/resources/: test.as  test.flow  test2.flow
Mycelium/resources/shaders/: engine.inl
Mycelium/src/engine/: README.md
Mycelium/src/engine/apis/: Fonts.hpp  Input.hpp  Math.hpp  Resources.cpp  Resources.hpp
Mycelium/src/engine/data/: AABB.hpp  Color.hpp  GUID.hpp  Image.hpp  Matrix4x4.hpp  Quaternion.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Mycelium/src/engine/objects/: Application.hpp  Camera.hpp  RenderPipeline.hpp  Renderer.hpp  Transform.hpp  Window.hpp  component.cppm  object.cppm  scene_object.cppm  scriptable_object.cppm  transform.cppm
Mycelium/src/scripting/: ast_converter.cpp  ast_converter.hpp  parser_interface.cpp  parser_interface.hpp  scripting-engine.hpp  scripting.hpp
Mycelium/src/scripting/registrations/apis/: Input.hpp
Mycelium/src/scripting/registrations/data/: Color.hpp  Matrix4x4.hpp  Vector4.hpp
Mycelium/src/scripting/registrations/objects/: Camera.hpp  Transform.hpp
Mycelium/src/ui/: core.hpp
Mycelium/src/ui/elements/: element.cpp  element.hpp  text.cpp  text.hpp
Mycelium/src/ui/elements/helper/: clay-imgui-renderer.hpp  clay-state.cpp  clay-state.hpp  clay-types.hpp
PrismEngine/: CMakeLists.txt
PrismEngine/include/: project_paths.h.in
PrismEngine/resources/: test.flow  test2.flow  test3.flow  test4.flow  text5.flow
PrismEngine/resources/scripts/: gemini-test.flow  output.as  prints.as  test.as
PrismEngine/resources/shaders/: atmosphere.slang  common.slang  composite.slang  const.inl  denoise.slang  render-gbuffer.slang  shared.inl  terrain-gen.slang
PrismEngine/resources/shaders/interface/: raycaster.slang
PrismEngine/resources/shaders/shared/: bricks.inl  chunks.inl  const.inl  material.inl  ray.inl  shared.inl  trace.inl
PrismEngine/resources/shaders/tracing/: trace-contree.slang  trace.slang
PrismEngine/src/: application.hpp  fonts.cpp  image.hpp  main.cpp  resources.hpp  voxel-app.hpp
PrismEngine/src/engine/apis/: Daxa.hpp  Fonts.hpp  Input.hpp  Math.hpp
PrismEngine/src/engine/data/: Image.hpp  Matrix4x4.hpp  Quaternion.hpp
PrismEngine/src/engine/objects/: Camera.hpp  Renderer.hpp
PrismEngine/src/math/: daxa_math.hpp  quaternion.hpp  vector3.hpp  vector4.hpp
PrismEngine/src/scripting/: engine.hpp  example.hpp
PrismEngine/src/scripting/registrations/apis/: Math.hpp
PrismEngine/src/scripting/registrations/data/: Quaternion.hpp  Vector2.hpp  Vector3.hpp
PrismEngine/src/ui/elements/: element.cpp  element.hpp  text.cpp
PrismEngine/src/ui/elements/helper/: clay-types.hpp
PrismEngine/src/user-interface/: root.hpp
PrismEngine/src/user-interface/core/: core.hpp  menu-page.hpp  settings-page.hpp
PrismEngine/src/user-interface/shared/: toggle.hpp
PrismEngine/src/vox/shaders/: render-gbuffer.slang  terrain-gen.slang
PrismEngine/src/vox/shaders/tracing/: trace.slang
PrismEngine/src/voxels/: contree.cpp  contree.hpp  structure.md  vox-renderer.hpp
app-framework/: CMakeLists.txt
app-framework/src/: application.hpp  camera.hpp  fonts.cpp  fonts.hpp  image.hpp  input.hpp  math.hpp  renderer.hpp  terminal-colors.hpp  window.hpp
app-framework/src/clayui/: clay-state.cpp  clay-state.hpp  core.hpp  element.cpp  element.hpp  text.cpp  text.hpp
app-framework/src/clayui/elements/: clay-text.cpp  clay-text.hpp  element.cpp  element.hpp  module-elements.hpp
app-framework/src/clayui/elements/helper/: clay-state.cpp  clay-state.hpp  clay-types.hpp
app-framework/src/clayui/wrapper/: clay-types.hpp  clay-ui.cpp  clay-ui.hpp  module-wrapper.hpp
app-framework/src/elements/: element.cpp
app-framework/src/math/: mat4x4.hpp  math.hpp  quaternion.hpp  vector2.hpp  vector4.hpp
app-framework/src/ui/: core.hpp
app-framework/src/ui/elements/: text.cpp
src/: CMakeLists.txt  application.hpp  base_app.hpp  main.cpp  shared.hpp  test.h  ui-build.hpp  voxel-app.hpp  window.hpp
src/core/: ui-build.hpp
src/resources/models/: prototype.vox
src/resources/scripts/: test.as
src/shaders/: atmosphere.slang  compute.glsl  compute.slang  shared.inl  terrain-gen.slang
src/user-interface/: delete-after-wip-ui  root.hpp
src/user-interface/core/: core.hpp  menu-page.hpp  settings-page.hpp
src/user-interface/shared/: toggle.hpp
src/vox/: vox-camera.hpp  vox-renderer.hpp
src/vox/shaders/: atmosphere.slang  combine-gi.slang  common.slang  compact-visible.slang  composite.slang  compute.slang  const.inl  denoise-gi.slang  depth-prepass.slang  gi-average.slang  global-illumination.slang  lighting.slang  raycast.slang  render-gbuffer.slang  render.slang  shared.inl  ssao.slang  terrain-gen.slang  voxel-hashmap.inl  voxel-hashmap.slang
src/vox/shaders/tracing/: common.slang  hashmap.slang  shading.slang  trace.slang
src/voxels/: span-hash.hpp  structure.md  tree-shapes.hpp  tree-simple.hpp  tree64.hpp  vox-renderer.hpp
src/voxels/shaders/: common.slang  render.slang  shared.inl  trace.slang  tree64.slang
(+26 files in other folders)
